2008-09-24  Ramon Novoa  <rnovoa@artica.es>

	* extensions/update_manager/sql/update_manager.sql,
	  extensions/update_manager/lib/libupdate_manager_client.php,
	  extensions/update_manager/settings.php: Added proxy support to
	  update manager.

2008-09-23  Jorge Gonzalez  <jorgegonz@artica.es>

        * include/languages/es.po: Updated Spanish translation, fixes a bug.

2008-09-22  Raul Mateos  <raulofpandora@gmail.com>

	* pandora_console.spec: Changed URL. Added FMS to name. Updated version.

2008-09-22  Manuel Arostegui <marostegui@artica.es>

	* pandoradb_data.sql: Changed FTP module's TCP received string, set
	  to 220, 221 makes the module to does not know whether the service
	  is active or not.

2008-09-22  Jorge Gonzalez  <jorgegonz@artica.es>

	* include/languages/*: Updated translations from Launchpad. Thanks
	  to all contributors.

	* pandora_console/pandoradb_data.sql: database modified to show the
	  new languages.

2008-09-19  Evi Vanoost  <vanooste@rcbi.rochester.edu>

	* godmode/agentes/configurar_agente.php: Fixed small bug when renaming
	agent. Changed a string to a duplicate with the same meaning.

2008-09-19  Evi Vanoost  <vanooste@rcbi.rochester.edu>

	* include/styles/pandora.css: Removed some duplicate entries while
	hunting down a specific tag

	* include/functions_html.php: Added class to print_select () and
	removed the default 'select' display in case of empty

	* include/functions_db.php: Added comment to list_group so coders are
	reminded to use the html functions instead. Fixed dame_nombre_real
	because a user_id is not an int. Added function list_users similar to
	list_group. Needed to fill input boxes with user selections.

	* include/functions.php: Adhered pagination to correcter HTML style
	removed single quotes and closed open tags

	* operation/incidents/incident_statistics.php: Correcter HTML

	* operation/incidents/incident_search.php: Style changes. Use new
	functions for html objects
